<resources>

    <string name="app_name">SurgeryApp</string>
    <string name="api_key">epnrjcs2y4rs</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <!-- Patient frags -->
    <string name="patient_dashboard">Home</string>
    <string name="patient_progress_book">Progress</string>
    <string name="patient_appointments">Appointments</string>
    <string name="patient_profile">Profile</string>

    <!-- Patient frags -->
    <string name="doctor_dashboard">Home</string>
    <string name="doctor_patient_list">Patients</string>
    <string name="doctor_patient_progress_book">Patients Record</string>
    <string name="doctor_appointments">Appointments</string>
    <string name="doctor_profile">Profile</string>


    <string name="no_internet_connection">No Internet Connection</string>
    <string name="no_patient_list">No patient list found</string>


    <!-- Patient Home Dashboard -->
    <string name="general_info">General Info</string>
    <string name="notification">Notification</string>
    <string name="emergency">Emergency</string>
    <string name="progress_book">Progress Book</string>
    <string name="patient_appointment">Patient Appointment</string>
    <string name="gallery">Gallery</string>
    <string name="capture">Capture</string>

    <!-- Patient Upload New Image -->
    <string name="upload_your_new_wound_image">Upload your new wound image</string>
    <string name="description">Description</string>
    <string name="fluid_drain">1. Did fluid drain from wound?</string>
    <string name="submit">Submit</string>
    <string name="pain_rate">2. Rate your pain</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="not_sure">Not sure</string>
    <string name="worse">Worse</string>
    <string name="same">Same</string>
    <string name="better">Better</string>
    <string name="unsure">Unsure</string>
    <string name="none">None</string>

    <!-- General -->
    <string name="cancel">Cancel</string>
    <string name="okay">Okay</string>

    <!-- Details Activity -->
    <string name="entry_detail">Wound Image Details</string>
    <string name="edit">Edit</string>
    <string name="no_feedback">No feedback from any doctors</string>
    <string name="no_appointment">No appointments at this moment</string>
    <string name="prasanth_manimaran">Prasanth Manimaran</string>

    <!-- Emergency Numbers -->
    <string name="mers">General Emergency Services</string>
    <string name="ppum_emergency">PPUM Emergency</string>
    <string name="ppum_instruction">For wound emergencies please use the button below to contact PPUM Emergency</string>
    <string name="mers_instruction">For general emergencies please use the button below to contact 999</string>
    <string name="mers_number">999</string>
    <string name="ppum_emergency_number_ori">03-79494422</string>
    <string name="ppum_emergency_number">0146642285</string>

    <!-- Login/Register -->
    <string name="username">Username</string>
    <string name="user_registration_id">Registration ID</string>
    <string name="password">Password</string>
    <string name="login">LOGIN</string>
    <string name="welcome">Welcome back 😁</string>
    <string name="login_to_continue">Login to continue</string>
    <string name="fill_in_all_fields">Fill in all fields</string>
    <string name="log_out">Log Out</string>
    <string name="patients_list">Patients List</string>
    <string name="chats">Chats</string>
    <string name="appointments">Appointments</string>
    <string name="forgot_password">Forgot password?</string>
    <string name="patient_id">Patient ID</string>
    <string name="pain_level">Pain Level</string>
    <string name="fever">Fever</string>
    <string name="fluid_drain_tv">Fluid drain</string>
    <string name="redness">Redness</string>
    <string name="swelling">Swelling</string>
    <string name="odour">Odour</string>
    <string name="date">Date</string>
    <string name="feedback">Feedback</string>
    <string name="title">Title</string>
    <string name="swipe_down_to_refresh">Swipe down to refresh</string>
    <string name="researcher_notice"><u><b>As a researcher, you are only permitted to view all the patients uploaded images and the relevant details</b></u></string>

    <!-- Stream Chat -->
    <string name="go">GO</string>
    <string name="chat_app">Chat App</string>
    <string name="reliable_and_fast">Reliable and Fast</string>
    <string name="first_name">First Name</string>
    <string name="search">Search</string>
    <string name="settings">Settings</string>
    <string name="groups">Groups</string>
    <string name="channels">Channels</string>
    <string name="open">Open</string>
    <string name="close">Close</string>
    <string name="click_to_see_archived_files"><u>--- Click to see archived files ---</u></string>
    <string name="registration_id">Registration ID</string>
    <string name="update_details">Update Details</string>
    <string name="save_details">Save details</string>
    <string name="faq">FAQ</string>
    <string name="download_and_share">Download and Share</string>
    <string name="enter_4_digitCode">Please enter the 4-digit code sent to:-</string>
    <string name="enter_otp">Enter 4-digit OTP</string>
    <string name="sample_phone_number">146642285</string>

    <!--6 digit alpha numeric TAC-->
    <string name="alphaNumeric">abcdefghijklmnopqrstuvxwxyzABCDEFGHIJKLMNOPQRSTUVWXYZ1234567890-_</string>
    <string name="submit_to_continue">Submit to continue</string>
    <string name="verify_to_continue">Verify to continue</string>
    <string name="try_again_in">Try again in : </string>
    <string name="get_otp_again"><u>Resend the code</u></string>

    <string name="formatted_time">Try again in %02d:%02d seconds</string>
    <string name="formatted_chat_username">%1$s_%2$s_%3$s</string>
    <string name="notes">Notes</string>

    <!-- Note taking module -->
    <string name="no_data">No Data</string>
    <string name="sort_by">Sort By</string>
    <string name="priority_high">Priority High</string>
    <string name="priority_low">Priority Low</string>
    <string name="delete_all">Delete All</string>
    <string name="add">Add</string>
    <string name="save">Save</string>
    <string name="delete">Delete</string>

    <string-array name="priorities">
        <item>High Priority</item>
        <item>Medium Priority</item>
        <item>Low Priority</item>
    </string-array>

</resources>