<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".ui.fragments.patientFrags.PatientEmergencyCallFragment">

    <ImageView
        android:id="@+id/um_logo"
        android:layout_width="0dp"
        android:layout_height="@dimen/margin_180"
        android:src="@drawable/um_logo"
        android:layout_marginStart="@dimen/margin_80"
        android:layout_marginEnd="@dimen/margin_80"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/ppum_number_layout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="@dimen/margin_20"
        android:translationZ="@dimen/margin_1"
        android:background="@drawable/rounded_bg_extra"
        app:layout_constraintTop_toBottomOf="@id/um_logo">

        <TextView
            android:text="@string/ppum_emergency"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/text_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/ppum_instruction"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:textSize="@dimen/text_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:id="@+id/ppum_emergency_btn"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableTint="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:layout_gravity="center"
            android:text="@string/ppum_emergency_number_ori"
            android:layout_width="wrap_content"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_40"
            android:layout_height="wrap_content"/>
    </LinearLayout>

    <LinearLayout
        android:id="@+id/general_number_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:orientation="vertical"
        android:padding="@dimen/margin_20"
        android:gravity="bottom"
        android:background="@drawable/rounded_bg_extra2"
        app:layout_constraintTop_toBottomOf="@id/um_logo"
        app:layout_constraintBottom_toBottomOf="parent">

        <TextView
            android:text="@string/mers"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/text_20sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <TextView
            android:text="@string/ppum_instruction"
            android:textColor="@color/white"
            android:fontFamily="@font/poppins_regular"
            android:textStyle="bold"
            android:textSize="@dimen/text_12sp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <Button
            android:backgroundTint="@color/white"
            android:id="@+id/general_emergency_btn"
            android:drawableLeft="@drawable/ic_phone"
            android:drawableTint="@color/black"
            android:fontFamily="@font/poppins_semibold"
            android:layout_gravity="center"
            android:paddingStart="@dimen/margin_60"
            android:paddingEnd="@dimen/margin_60"
            android:text="@string/mers_number"
            android:textColor="@color/black"
            android:layout_width="wrap_content"

            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_40"
            android:layout_marginEnd="@dimen/margin_40"
            android:layout_height="wrap_content"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>