<?xml version="1.0" encoding="utf-8"?>
<androidx.core.widget.NestedScrollView xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/uploadFragmentLayout"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@color/white"
    android:fitsSystemWindows="true"
    android:fillViewport="true"
    android:scrollbarAlwaysDrawVerticalTrack="true"
    android:scrollbars="vertical"
    tools:context=".ui.fragments.UploadNewEntryFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <ImageView
            android:id="@+id/new_wound_image"
            android:layout_width="@dimen/margin_200"
            android:layout_height="@dimen/margin_250"
            android:scaleType="fitXY"
            android:src="@drawable/upload_instruction"
            android:background="@drawable/rounded_bg"
            android:layout_marginTop="@dimen/margin_50"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

        <TextView
            android:id="@+id/upload_instruction"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/text_12sp"
            android:text="@string/upload_your_new_wound_image"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_wound_image" />

        <Button
            android:id="@+id/pick_from_gallery_btn"
            android:text="@string/gallery"
            android:layout_width="@dimen/margin_130"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/red"
            tools:ignore="MissingConstraints" />

        <Button
            android:id="@+id/camera_btn"
            android:text="@string/capture"
            android:layout_width="@dimen/margin_130"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            tools:ignore="MissingConstraints" />

        <ProgressBar
            android:id="@+id/progress_bar"
            style="@android:style/Widget.Material.Light.ProgressBar.Horizontal"
            app:layout_constraintTop_toBottomOf="@+id/upload_instruction"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            android:max="100"
            android:visibility="gone"
            tools:progress="25"/>


        <androidx.constraintlayout.helper.widget.Flow
            android:id="@+id/flow"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_5"
            app:constraint_referenced_ids="pick_from_gallery_btn, camera_btn"
            app:layout_constraintTop_toBottomOf="@+id/progress_bar"
            tools:layout_editor_absoluteX="20dp" />

        <EditText
            android:id="@+id/new_entry_title"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/title"
            android:inputType="text"
            android:ellipsize="end"
            android:padding="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/flow"
            android:background="@drawable/colored_border_edit_text"/>

        <EditText
            android:id="@+id/new_entry_description"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:fontFamily="@font/poppins_regular"
            android:hint="@string/description"
            android:inputType="textMultiLine"
            android:maxLines="2"
            android:minLines="1"
            android:minHeight="@dimen/margin_50"
            android:maxHeight="@dimen/margin_100"
            android:padding="@dimen/margin_10"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/new_entry_title"
            android:background="@drawable/colored_border_edit_text"/>

        <TextView
            android:id="@+id/ques_fluid"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/fluid_drain"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/text_14sp"
            android:layout_marginTop="@dimen/margin_20"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@id/new_entry_description"/>

        <RadioGroup
            android:id="@+id/rgFluidDrainage"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:weightSum="1"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@+id/ques_fluid">

            <RadioButton
                android:id="@+id/rb_fluid_yes"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:fontFamily="@font/poppins_regular"
                android:text="Yes"
                />
            <RadioButton
                android:id="@+id/rb_fluid_no"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:fontFamily="@font/poppins_regular"
                android:text="No"
                />
            <RadioButton
                android:id="@+id/rb_fluid_notSure"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_weight="0.33"
                android:fontFamily="@font/poppins_regular"
                android:text="Not sure"

                />
        </RadioGroup>

        <TextView
            android:id="@+id/ques_pain_rate"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/pain_rate"
            android:fontFamily="@font/poppins_semibold"
            android:textSize="@dimen/text_14sp"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@id/rgFluidDrainage"/>

        <com.hsalf.smilerating.SmileRating
            android:id="@+id/rating_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/margin_10"
            android:layout_marginStart="@dimen/margin_20"
            android:layout_marginEnd="@dimen/margin_20"
            app:layout_constraintTop_toBottomOf="@id/ques_pain_rate"/>

        <Button
            android:id="@+id/submit_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/green"
            android:fontFamily="@font/poppins_regular"
            android:text="@string/submit"
            android:textColor="@color/black"
            android:layout_marginTop="@dimen/margin_10"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/rating_bar" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.core.widget.NestedScrollView>